[package]
name = "media-pipeline-service"
version = "0.1.0"
edition = "2021"
authors = ["John Basrai <john@basrai.dev>"]
description = "REST API service for media processing using GStreamer and Rust"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = "0.4.42"
gstreamer = "0.21"
gstreamer-app = "0.21"
gstreamer-video = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
