[package]
name = "media-pipeline-service"
version = "0.2.0"
edition = "2021"
authors = ["John Basrai <john@basrai.dev>"]
description = "REST API service for media processing using GStreamer and Rust"

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = "0.4.42"
clap = { version = "4.0", features = ["derive"] }
gstreamer = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
chrono  = "0.4"  # For timestamp parsing
reqwest = { version = "0.11", features = ["json"] }
